--- a/frontend/pgmon-frontend/package.json
+++ b/frontend/pgmon-frontend/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.8",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
