--- a/backend/pgmon-backend.service
+++ b/backend/pgmon-backend.service
@@ -3,11 +3,15 @@ Description=PostgreSQL Activity Monitor Backend
 After=network.target
 
 [Service]
+Type=simple
 User=pgmonitor
 Group=pgmonitor
 WorkingDirectory=/home/pgmonitor/pg_activity_monitor/backend
+Environment="PATH=/home/pgmonitor/.local/bin:/usr/bin"
+Environment="LOG_LEVEL=INFO"
 ExecStart=/home/pgmonitor/.local/bin/uvicorn main:app --host 0.0.0.0 --port 8000
 Restart=always
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
