--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,10 @@
-fastapi==0.111.0
-uvicorn==0.30.1
+fastapi==0.68.2
+uvicorn==0.15.0
 psycopg2-binary==2.9.9
+paramiko==3.4.0
+cryptography==41.0.7
 bcrypt==4.1.3
 pyjwt==2.8.0
-cryptography==42.0.8
-paramiko==3.4.0
-python-dotenv==1.0.1
+python-dotenv==0.21.1
+pydantic==1.10.13
+python-multipart==0.0.6
