--- a/frontend/pgmon-frontend/package.json
+++ b/frontend/pgmon-frontend/package.json
@@ -22,10 +22,10 @@
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
-    "semver": "^7.7.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "terser": "^5.39.0",
@@ -56,8 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-datepicker": "^7.0.0"
   }
 }
